<resources>
    <string name="app_name">Newzfly</string>


    <string name="INDIA">India</string>
    <string name="ADD_NEW_CATEGORY">Add new category</string>
    <string name="NO_CATEGORY">You have not added any category yet.</string>
    <string name="SELECT_SHOP_CATEGORY">News Category</string>
    <string name="ITEM_CATEGORY">News Category</string>
    <string name="POST">Post</string>
    <string name="ENTER_CATEGORY_NAME">Enter news category ex. India,social etc.</string>
    <string name="CANCEL">Cancel</string>
    <string name="ADD">Add</string>
    <string name="PLEASE_ENTER_CORRECT_CATEGORY">Please enter category.</string>
    <string name="EDIT">Edit</string>
    <string name="msm_full_text">My News App</string>
    <string name="msm_tag_line">Daily news updates only one Newzfly</string>
    <string name="SIGN_IN_WITH_GOOGLE">Sign in with google</string>
    <string name="SOMETHING_WENT_WRONG">Something went wrong</string>
    <string name="ENABLE">Enable</string>
    <string name="CHECK_YOUR_INTERNET_CONNECTION">Check your internet connection</string>

    <string name="auth_failed">Authentication failed</string>
    <string name="GO_LIVE">Go live</string>
    <string name="START_WRITING">Start write news articles...</string>
    <string name="ENTER_TITLE_OF_STORY">Enter News Headline</string>
    <string name="TAP_TO_ADD_COVER">Add news picture</string>
    <string name="ENTER_NEWS_LINK">Put  news link here...</string>
    <string name="PLEASE_WAIT">Please wait...</string>
    <string name="PLEASE_GIVE_PERMISSIONS">Please give permissions to upload image.</string>
    <string name="UPLOADING_IMAGE">Uploading image</string>
    <string name="PLEASE_WAIT_FOR_IMAGE">Please wait while we upload and process image.</string>
    <string name="IMAGE_UPLOADED_SUCCESSFULLY">Image uploaded successfully.</string>
    <string name="HOT_TOPICS">Hot Topics</string>
    <string name="CATEGORY">Category</string>
    <string name="ViewMore">View More...</string>
    <string name="SUGGESTED_TOPICS">Suggested Topics</string>
    <string name="CATEGORIES">Categories</string>
    <string name="ALL_NEWS">All News</string>
    <string name="BOOK_MARKS">Bookmarks</string>
    <string name="TRENDING">Trending</string>
    <string name="TOP_STORIES">Top Stories</string>
    <string name="ADD_CATEGORY_PIC">Add category image</string>
    <string name="PLEASE_ADD_CATEGORY_IMG">Please add category image.</string>
    <string name="PUBLISH_NEWS">Publish News</string>
    <string name="SELECT_NEWS_CATEGORY">Select news language</string>
    <string name="ENGLISH">English</string>
    <string name="HINDI">हिंदी</string>
    <string name="PLEASE_SELECT_LANGUAGE">Please select language before</string>
    <string name="ADD_NEWS_ARTICLES">Add news article</string>
    <string name="ADD_NEWS_VOTING_POOL">Create voating pool article</string>
    <string name="LANGUAGE">Language</string>
    <string name="SELECT_LANGUAGE">Select language</string>
    <string name="E_MAIL">E-mail</string>
    <string name="Enter_name">Username</string>
    <string name="MY_profile">My Profile</string>
    <string name="SAVE">Save</string>
    <string name="UPLOADING_DATA">Updating data</string>
    <string name="PLEASE_FILL_ALL">Please fill all the details</string>
    <string name="PROFILE_UPDATED">Profile updated successfully</string>
    <string name="IMAGE_UPLOADED">Image Uploaded Successfully</string>
    <string name="SETTING">Setting</string>
    <string name="CHOOSE_LANGUAGE">Choose Language</string>
    <string name="WRITE_YOUR_OPINION">Write your opinion...</string>
    <string name="SUBMIT">Submit</string>
    <string name="ADD_YOUR_OPENION">Add your comment</string>
    <string name="ENTER_TITLE_OF_POOL">Enter pool headline</string>
    <string name="START_WRITING_pool">Start write pool article...</string>
    <string name="TAP_TO_ADD_COVER_Pool">Add pool image</string>
    <string name="PUBLISH_POOL">Publish pool</string>
    <string name="Select_pool_language">Select pool language</string>
    <string name="VOTING_POOL">Voting Pool</string>
    <string name="NO">No</string>
    <string name="YES">Yes</string>
    <string name="ASK_YOUR_QUESTION">Ask your question</string>
    <string name="SETTINGS">Setting</string>
    <string name="CLEAR_BOOKMARK">Clear Bookmark</string>
    <string name="NOTIFICATION">Notification</string>
    <string name="SHARE">Share</string>
    <string name="FEEDBACK">Feedback</string>
    <string name="TERMSandCONDITION">Terms and condition</string>
    <string name="PRIVACY_POLICY">Privacy Policy</string>
    <string name="CLEAR">Clear</string>
    <string name="ON">On</string>
    <string name="RATE_US">Rate us on play store</string>
    <string name="PLEASE_INSTALL_GMAIL_TO_SEND">Please install gmail in your mobile.</string>
    <string name="SOME_REQUEST">Application Request</string>
    <string name="APPLICATION_PLAN">Submit your idea below we love to work on that.</string>
    <string name="APPLICATION_FEEDBACK">Feedback</string>
</resources>
